[fix] svg center alignment, code improvements

--- a/sources/styles/app.css
+++ b/sources/styles/app.css
@@ -1,3 +1,7 @@
+.curriculum svg{
+    height:100%;
+    width:100%;
+}
 .teacher_dashboard.webix_abslayout{
     background-color:#eee;
 }
